--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,7 +25,7 @@
                     <div *ngFor="let contact of contactData" class="col-lg-3 col-md-4 mt-4 pt-2 pointer wow slideIn{{contact['animationClass']}}" data-wow-delay=0.1s>
                        <ng-template #title><strong> <em>{{contact['title']}}</em> </strong></ng-template>
                        <div class="text-center" placement="bottom" [ngbTooltip]="title">
-                          <i class="{{contact['icon']}} text-custom h3 mb-4"></i>
+                          <i style="font-size: 80px;" class="{{contact['icon']}} text-custom h3 mb-4"></i>
                           <h3 *ngFor="let links of contact['links']" class="mb-{{contact['links'].length-1}} font-weight-normal line-height-normal">
                            <a rel="noreferrer" style="font-size: 16px; color:white;" aria-label="contact(opens in a new tab)" target="_blank" class="contact-links" href="{{links['type']}}{{links['title']}}">
                               {{links['title']}}
